# Customer-Churn-Prediction

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  FAANG_INTERVIEW_REPORT.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
app/: __init__.py  app.py  dashboard.py  logger.py  schemas.py  shared.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
models/: best_model.pkl  feature_names.json  model_metadata.json  preprocessor.pkl
pages/: 1_🔍_Prediction.py  2_📂_Batch_Analysis.py  3_🎯_Risk_Segments.py  4_🧠_Model_Insights.py  5_🖥_System_Monitor.py  6_📡_Data_Management.py
src/: __init__.py  config.py  data_ingestion.py  data_preprocessing.py  evaluation.py  explainability.py  feature_engineering.py  model_registry.py  model_training.py  monitoring.py  prevention.py
tests/: test_api.py  test_data_preprocessing.py  test_model_training.py  test_prevention.py
